# audio-system-h7

./: .clang-format  .clangd  .editorconfig  .env.example  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  ash7_protocol_architecture_7d75ee89.plan.md  openocd.cfg
.devcontainer/: Dockerfile  devcontainer.json
bsp/: CMakeLists.txt  gpio.c  gpio.h  hsem.c  hsem.h  lcd.c  lcd.h  sdram.c  sdram.h  uart.c  uart.h
bsp/gpio/: gpio.c  gpio.h
bsp/hsem/: hsem.c
bsp/i2c/: i2c.c  i2c.h
bsp/lcd/: lcd.c  lcd.h
bsp/sdram/: sdram.c  sdram.h
bsp/uart/: uart.c  uart.h
cube/: .mxproject  CMakeLists.txt  cube.ioc  mx-generated.cmake
cube/CM4/: CMakeLists.txt  mx-generated.cmake
cube/CM4/Core/Inc/: FreeRTOSConfig.h  main.h  sdmmc.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
cube/CM4/Core/Src/: dma2d.c  eth.c  fdcan.c  fmc.c  freertos.c  gpio.c  i2c.c  ltdc.c  main.c  quadspi.c  sai.c  sdmmc.c  stm32h7xx_it.c  usart.c  usb_otg.c
cube/CM7/: CMakeLists.txt  mx-generated.cmake  stm32h745xx_flash_CM7.ld  stm32h745xx_sram1_CM7.ld
cube/CM7/Core/Inc/: FreeRTOSConfig.h  main.h  stm32h7xx_it.h
cube/CM7/Core/Src/: freertos.c  gpio.c  main.c  stm32h7xx_it.c
docs/: CubeMX_I2C4_touch.md
drivers/: CMakeLists.txt  lcd.c  lcd.h  lcd_driver.c  lcd_driver.h  uart.c
drivers/gpio/: gpio.c  gpio.h  gpio_driver.c  gpio_driver.h
drivers/hsem/: hsem.c  hsem.h  hsem_driver.c
drivers/i2c/: i2c.c  i2c_driver.c  i2c_driver.h
drivers/lcd/: lcd.c  lcd.h  lcd_driver.c  lcd_driver.h
drivers/sdram/: sdram.c  sdram_driver.c  sdram_driver.h
drivers/timer/: timer_driver.c  timer_driver.h
drivers/touch/: touch.c  touch.h  touch_driver.c  touch_driver.h
drivers/uart/: uart.c  uart.h  uart_driver.c  uart_driver.h
host/: README.md  pyproject.toml
host/scripts/: test_connection.py
host/src/host/: __init__.py  config.py  main.py
host/src/host/protocol/: __init__.py  client.py  framer.py
host/src/host/transports/: __init__.py  base.py  serial.py
host/static/: app.js  index.html  style.css
include/: CMakeLists.txt  ipc_shared.h  messages.h  shared_mem.h
include/platform/: ipc_channels.h  shared_mem.h
include/protocol/: messages.h  rpc_types.h
lib/cobs/: CMakeLists.txt  cobs.c  cobs.h
messaging_protocol/: messaging_protocol.options  messaging_protocol.proto
proto/: ash7.proto  messages.yaml
scripts/: attach-usb.sh  build-and-flash.sh  build.sh  clean.sh  codegen.sh  configure.sh  fix-cubemx-clocks.sh  flash.sh  gen-proto-host.sh  gen-proto.sh  make-dualcore-hex.sh  merge-compile-commands.sh  rebuild.sh
src/: CMakeLists.txt  app_main.c  display.c  display.h  heartbeat.c  led.c  rpc.c  rpc_generated.c  sdram.c  sdram.h  transport.c  transport.h
src/app_main/: app_main.c
src/cm4/: CMakeLists.txt  app_main.c
src/cm4/app_main/: app_main.c
src/cm4/uart/: uart.c  uart.h
src/cm7/: CMakeLists.txt
src/cm7/app_main/: app_main.c
src/cobs/: cobs.c
src/common/: CMakeLists.txt  ipc.c  ipc.h
src/display/: display.c  display.h
src/dlog/: dlog.c  dlog.h
src/heartbeat/: heartbeat.c
src/ipc/: ipc.c  ipc.h  ipc_shared.h
src/led/: led.c
src/messaging_protocol/: messaging_protocol.h  messaging_protocol_framer.c  messaging_protocol_framer.h  messaging_protocol_handler.c  messaging_protocol_handler.h  messaging_protocol_task.c  messaging_protocol_transport.h
src/messaging_protocol/transport/: messaging_protocol_uart.c
src/rpc/: messages.h  rpc.c  rpc.h  rpc_config.h  rpc_generated.c  rpc_generated.h
src/sdram/: sdram.c  sdram.h
src/touch/: touch.c  touch.h
src/transport/: transport.c  transport.h
src/uart/: uart.c  uart.h
stm32_hw/: .clang-format  .mxproject  CMakeLists.txt  mx-generated.cmake  stm32_hw.ioc
stm32_hw/CM4/: CMakeLists.txt  CMakePresets.json  mx-generated.cmake
stm32_hw/CM4/Core/Inc/: FreeRTOSConfig.h  main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
stm32_hw/CM4/Core/Src/: dma2d.c  freertos.c  gpio.c  ltdc.c  main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c  usart.c
stm32_hw/CM4/USB_DEVICE/App/: usbd_desc.c
stm32_hw/CM7/: CMakeLists.txt  mx-generated.cmake
stm32_hw/CM7/Core/Inc/: FreeRTOSConfig.h  main.h  stm32h7xx_it.h
stm32_hw/CM7/Core/Src/: freertos.c  gpio.c  main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c  tim.c
tools/: flash.sh  generate.py  host.py  messages.yaml  rebuild.sh  rpc_messages.py
tools/codegen/: generate.py
tools/host/: README.md  app.py  bridge.py  host.py  requirements.txt  rpc_messages.py
tools/host/static/: app.js  style.css
tools/host/templates/: index.html
