[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audio-system-h7-host"
version = "0.1.0"
description = "Host application for audio-system-h7 device communication"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "pyserial>=3.5",
    "protobuf>=3.20.0,<4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/host"]
